add_subdirectory(vsgcompute)
add_subdirectory(vsgdraw)
add_subdirectory(vsgsubpass)
add_subdirectory(vsgviewer)
add_subdirectory(vsgintersection)
add_subdirectory(vsginput)
add_subdirectory(vsgmultigpu)
add_subdirectory(vsgraytracing)
add_subdirectory(vsgrendertotexture)
add_subdirectory(vsgexecutecommands)
add_subdirectory(vsgortho)
add_subdirectory(vsgscreenshot)
add_subdirectory(vsgheadless)

if (OSG_FOUND AND OSGDB_FOUND AND OSGVIEWER_FOUND AND OSGUTIL_FOUND AND OPENGL_FOUND)
add_subdirectory(vsgwithosg)
endif()
