set(SOURCES
    GLMemoryExtensions.cpp
    GLSemaphore.cpp
    SharedTexture.cpp
    ../shared/AnimationPath.cpp
    vsgwithosg.cpp
)

add_executable(vsgwithosg ${SOURCES})

target_link_libraries(vsgwithosg vsg::vsg ${OPENTHREADS_LIBRARIES} ${OSG_LIBRARIES} ${OSGUTIL_LIBRARIES} ${OSGDB_LIBRARIES} ${OSGGA_LIBRARIES} ${OSGVIEWER_LIBRARIES} ${OPENGL_LIBRARIES})

if (vsgXchange_FOUND)
    target_compile_definitions(vsgwithosg PRIVATE USE_VSGXCHANGE)
    target_link_libraries(vsgwithosg vsgXchange::vsgXchange)
endif()
